--- a/dockerfiles/Dockerfile-Fedora27
+++ b/dockerfiles/Dockerfile-Fedora27
@@ -11,5 +11,7 @@ RUN dnf install --assumeyes wayland-protocols-devel libwayland-client libwayland
 RUN dnf install --assumeyes lz4-devel harfbuzz-devel libXpresent-devel libwebp-devel hyphen-devel lua-devel tslib-devel pixman-devel libvncserver-devel SDL2-devel openjpeg2-devel
 
 # Upgrade wayland-protocols-devel package to 1.12 from rawhide (can be changed back when it hits 27 as update)
-RUN dnf install --assumeyes fedora-repos-rawhide
-RUN dnf --disablerepo=* --enablerepo=rawhide --releasever=28 upgrade --assumeyes wayland-protocols-devel
+#RUN dnf install --assumeyes fedora-repos-rawhide
+#RUN dnf --disablerepo=* --enablerepo=rawhide --releasever=28 upgrade --assumeyes wayland-protocols-devel
+RUN wget http://archive.fedoraproject.org/pub/fedora-secondary/development/rawhide/Everything/ppc64le/os/Packages/w/wayland-protocols-devel-1.13-1.fc28.noarch.rpm
+RUN rpm -i wayland-protocols-devel-1.13-1.fc28.noarch.rpm
