--- a/dockerfiles/Dockerfile-Fedora28
+++ b/dockerfiles/Dockerfile-Fedora28
@@ -13,6 +13,9 @@ RUN dnf install --assumeyes lz4-devel harfbuzz-devel libXpresent-devel libwebp-d
 # Install windows cross build dependencies
 RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ mingw64-gcc mingw64-gcc-c++ wget bzip2 efl
 
+# Make sure we have efl 1.21 installed for the mingw cross build (needs newest eolian_gen)
+RUN dnf --assumeyes --releasever=29 update efl
+
 # Build mingw cross-build dependencies for windows build
 RUN git clone https://github.com/vtorri/ewpi.git
 RUN cd ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
