--- a/dockerfiles/Dockerfile-Fedora29
+++ b/dockerfiles/Dockerfile-Fedora29
@@ -17,7 +17,7 @@ RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ m
 RUN git clone https://github.com/vtorri/ewpi.git
 RUN cd ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
 RUN cd ewpi; sed -i -e 's/make -j install/make -j1 install/g' packages/dbus/install.sh
-RUN cd ewpi; sed -i -e 's/make -j install/make -j1 install/g' packages/xz/install.sh
+RUN cd ewpi; sed -i -e 's/make V=0 -j install/make V=0 -j1 install/g' packages/xz/install.sh
 RUN cd ewpi; ./ewpi /root/EFL/ewpi_64 x86_64-w64-mingw32
 
 # Setup machine to be usable with dbus-daemon
