docker: disable ewpi toolchain build in docker image
This has caused to many troubles so far. For now I build this locally
and push the image to dockerhub. To be revisited later.

--- a/dockerfiles/Dockerfile-Fedora29
+++ b/dockerfiles/Dockerfile-Fedora29
@@ -14,9 +14,9 @@ RUN dnf install --assumeyes lz4-devel harfbuzz-devel libXpresent-devel libwebp-d
 RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ mingw64-gcc mingw64-gcc-c++ wget bzip2 efl-devel
 
 # Build mingw cross-build dependencies for windows build
-RUN git clone https://github.com/vtorri/ewpi.git
-RUN cd ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
-RUN cd ewpi; ./ewpi /root/EFL/ewpi_64 x86_64-w64-mingw32 1
+#RUN git clone https://github.com/vtorri/ewpi.git
+#RUN cd ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
+#RUN cd ewpi; ./ewpi /root/EFL/ewpi_64 x86_64-w64-mingw32 1
 
 # Setup machine to be usable with dbus-daemon
 RUN systemd-machine-id-setup
