--- a/dockerfiles/Dockerfile-Fedora28
+++ b/dockerfiles/Dockerfile-Fedora28
@@ -17,9 +17,9 @@ RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ m
 RUN dnf --assumeyes --releasever=29 update efl-devel
 
 # Build mingw cross-build dependencies for windows build
-RUN git clone https://github.com/vtorri/ewpi.git
-RUN cd ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
-RUN cd ewpi; ./ewpi /root/EFL/ewpi_64 x86_64-w64-mingw32 1
+#RUN git clone https://github.com/vtorri/ewpi.git
+#RUN cd ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
+#RUN cd ewpi; ./ewpi /root/EFL/ewpi_64 x86_64-w64-mingw32 1
 
 # Setup machine to be usable with dbus-daemon
 RUN systemd-machine-id-setup
