--- a/dockerfiles/Dockerfile-Fedora29
+++ b/dockerfiles/Dockerfile-Fedora29
@@ -11,7 +11,7 @@ RUN dnf install --assumeyes wayland-protocols-devel libwayland-client libwayland
 RUN dnf install --assumeyes lz4-devel harfbuzz-devel libXpresent-devel libwebp-devel hyphen-devel lua-devel tslib-devel pixman-devel libvncserver-devel SDL2-devel openjpeg2-devel avahi-devel alsa-lib-devel ibus-devel scim-devel gnutls-devel libgcrypt-devel gstreamer-devel gstreamer-plugins-base-devel lcov
 
 # Install windows cross build dependencies
-RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ mingw64-gcc mingw64-gcc-c++ wget bzip2 bison flex efl-devel
+RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ mingw64-gcc mingw64-gcc-c++ wget bzip2 bison flex
 
 # Build mingw cross-build dependencies for windows build
 #RUN cd /; git clone https://github.com/vtorri/ewpi.git
