--- a/dockerfiles/Dockerfile-Fedora30-mingw
+++ b/dockerfiles/Dockerfile-Fedora30-mingw
@@ -1,9 +1,16 @@
 FROM stefanschmidt1/ci-support-files:Fedora30
 
-# Install windows cross build dependencies
-RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ mingw64-gcc mingw64-gcc-c++ wget bzip2 bison flex yasm
+# Install windows cross build dependencies. We need the newest ming64 and gcc thus using a copr repo
+# for rawhide
+RUN dnf install --assumeyes 'dnf-command(copr)' && dnf --assumeyes copr enable smani/mingw-gcc9
+RUN sed -i -e 's/$releasever/rawhide/g' /etc/yum.repos.d/_copr:copr.fedorainfracloud.org:smani:mingw-gcc9.repo
+RUN dnf install --assumeyes cmake nasm patch gperf mingw32-gcc mingw32-gcc-c++ mingw64-gcc mingw64-gcc-c++ mingw64-pkg-config wget bzip2 bison flex yasm
 
 # Build mingw cross-build dependencies for windows build
-#RUN cd /; git clone https://github.com/vtorri/ewpi.git
-#RUN cd /ewpi; gcc -std=c99 -o ewpi ewpi.c ewpi_map.c
-#RUN cd /ewpi; ./ewpi --prefix=/ewpi-64-install --jobs=2 --clean
+RUN cd /; \
+	git clone https://github.com/vtorri/ewpi.git; \
+	cd /ewpi; \
+	git checkout 5eaff6e068cd69aa3702dfbe4b7c54790386e286 -b known-working; \
+	sed -i -e 's/log 2>&1/make.log 2>&1 || true/g' packages/lz4/install.sh; \
+	gcc -std=c99 -o ewpi ewpi.c ewpi_map.c; \
+	./ewpi --prefix=/ewpi-64-install --jobs=2
