dockerfiles: format Ubuntu file in an easy to edit way

--- a/dockerfiles/Dockerfile-Ubuntu1910
+++ b/dockerfiles/Dockerfile-Ubuntu1910
@@ -2,5 +2,21 @@ FROM ubuntu:19.10
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update -y && apt-get install -y build-essential autoconf automake autopoint doxygen check luajit libharfbuzz-dev libpng-dev libudev-dev libwebp-dev libssl-dev libluajit-5.1-dev libfribidi-dev libcogl-gles2-dev libgif-dev libtiff5-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libdbus-1-dev libmount-dev libblkid-dev libpulse-dev libxrandr-dev libxtst-dev libxcursor-dev libxcomposite-dev libxinerama-dev libxkbfile-dev libbullet-dev libvlc-dev libsndfile1-dev libraw-dev libspectre-dev libpoppler-cpp-dev libpam0g-dev liblz4-dev faenza-icon-theme gettext git imagemagick libasound2-dev libbluetooth-dev libfontconfig1-dev libfreetype6-dev libibus-1.0-dev libiconv-hook-dev libjpeg-dev libjpeg-turbo8-dev libpoppler-dev libpoppler-private-dev libproxy-dev librsvg2-dev libscim-dev libsystemd-dev libtool libudisks2-dev libunibreak-dev libxcb-keysyms1-dev libxine2-dev libxss-dev linux-tools-common libcurl4-openssl-dev systemd ccache git binutils-gold python3-pip ninja-build dbus-x11 libavahi-client-dev mono-runtime mono-mcs libopenjp2-7-dev
+RUN apt-get update -y && apt-get install -y build-essential doxygen check \
+    gettext git ninja-build python3-pip ccache binutils-gold dbus-x11 \
+    graphicsmagick-imagemagick-compat faenza-icon-theme \
+    libpam0g-dev libfreetype6-dev libpng-dev zlib1g-dev libjpeg-dev \
+    libdbus-1-dev libluajit-5.1-dev libx11-dev libxcursor-dev \
+    libxrender-dev libxrandr-dev libxfixes-dev libxdamage-dev libxcomposite-dev \
+    libxss-dev libxext-dev libxinerama-dev libxkbfile-dev libxtst-dev \
+    libxcb-keysyms1-dev libpulse-dev libsndfile1-dev libudev-dev \
+    libblkid-dev libmount-dev libgstreamer1.0-dev libtiff5-dev libgif-dev \
+    libssl-dev libspectre-dev libpoppler-dev librsvg2-dev libraw-dev libpoppler-private-dev \
+    libfribidi-dev libcogl-gles2-dev libbullet-dev libgstreamer-plugins-base1.0-dev \
+    libvlc-dev libpoppler-cpp-dev libsystemd-dev systemd libsystemd0 \
+    libavahi-client-dev libibus-1.0-dev libharfbuzz-dev libwebp-dev libopenjp2-7-dev \
+    liblz4-dev libasound2-dev libbluetooth-dev libfontconfig1-dev libiconv-hook-dev \
+    libproxy-dev libscim-dev libudisks2-dev libunibreak-dev libxine2-dev \
+    libcurl4-openssl-dev mono-runtime mono-mcs
 RUN pip3 install meson
+#linux-tools-common libjpeg-turbo8-dev
